--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
                         <a href="#about">Team</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Design</a>
-                    </li>
-                    <li class="page-scroll">
                         <a href="#contact">Protoype</a>
                     </li>
                 </ul>
@@ -93,40 +90,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About Us</h2>
+                    <h2>About</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/cristian.png" class="img-responsive" alt="">
-                    </a>
+                <div class="col-lg-12 text-center">
+                    <p>Finding reliable information about events is incredibly difficult. By enabling people to make informed decisions about events through user-driven data, we can improve how people treat events before, experience them during, and remember them after. We are looking to achieve this by providing a platform in which people can create events, share information, and communicate with others.
+                    </p>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/neven.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/dartis.png" class="img-responsive" alt="">
-                    </a>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                 </div>
             </div>
         </div>
@@ -137,18 +110,39 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>The Team</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Herd Pitch.</p>
+                <div class="col-sm-4 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/cristian.png" class="img-responsive" alt="">
+                    </a>
                 </div>
-                <div class="col-lg-4">
-                    <p>More about Herd.</p>
+                <div class="col-sm-4 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/neven.png" class="img-responsive" alt="">
+                    </a>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-sm-4 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/dartis.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 text-center">
+                    <h3>Cristian Lara</h3>
+                    <p>Designer</br>Developer</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <h3>Neven Wang-Tomic</h3>
+                    <p>Team Manager</br>Developer</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <h3>Dartis Willis</h3>
+                    <p>Head Design</br>User Testing</p>
                 </div>
             </div>
         </div>
@@ -159,51 +153,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Us</h2>
+                    <h2>Prototype</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
+                <div class="col-lg-4"></div>
+                <div class="col-lg-8 protoype">
+                    <div class="protoio-embed-prototype" data-account="cristianlara" data-project="8de3d836-95dd-435b-871b-4454628aad86" data-version="1" data-show-sidebuttons="0" style="width: 400px; height: 600px;"></div>
+                    <script async src="//static.proto.io/api/widget-embed.js"></script>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <strong><a href="https://cristianlara.proto.io/share/?id=8de3d836-95dd-435b-871b-4454628aad86&v=1" target="_blank">View in Separate Tab</a></strong>
+                </div>
+                <div class="col-lg-12 text-center">
+                <strong><a href="img/presentation.pdf" title="presentation.pdf" target="_blank">Slide Presentation</a></strong>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <strong><a href="img/README.pdf" title="README" target="_blank">README</a></strong>
                 </div>
             </div>
         </div>
