Removed images, changed about, changed navbar padding

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Finding reliable information about events is incredibly difficult. By enabling people to make informed decisions about events through user-driven data, we can improve how people treat events before, experience them during, and remember them after. We are looking to achieve this by providing a platform in which people can create events, share information, and communicate with others.
+                    <p>Finding reliable information about events is incredibly difficult. By enabling people to make informed decisions about events through user-driven data, we can improve how people treat events before, experience them during, and remember them after. Herd achieves through a smart platform in which people can create events, share information, and communicate with others.
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
