--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">HERD</a>
+                <img class="img-logo" src="img/profile.png" alt="">
+                <a class="navbar-brand" href="#page-top">Herd</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,7 +77,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">HERD</span>
+                        <span class="name">Herd</span>
                         <hr class="star-light">
                         <span class="skills">Never Miss Out</span>
                     </div>
