--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
+    <!-- About -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- The Team -->
     <section class="success" id="about">
         <div class="container">
             <div class="row">
@@ -148,7 +148,59 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Video -->
+    <section class="video" id="about">
+        <div class="container">
+            <div class="row">
+                <iframe width="640" height="360" src="https://www.youtube.com/embed/1_6CTiQ-FnY" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+    <!-- Reports -->
+    <section class="success" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>The Team</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/cristian.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/neven.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/dartis.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 text-center">
+                    <h3>Cristian Lara</h3>
+                    <p>Designer</br>Developer</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <h3>Neven Wang-Tomic</h3>
+                    <p>Team Manager</br>Developer</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <h3>Dartis Willis</h3>
+                    <p>Head Design</br>User Testing</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Prototype -->
     <section id="contact">
         <div class="container">
             <div class="row">
