--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
                         <a href="#portfolio">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Team</a>
+                        <a href="#team">Team</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#video">Video</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#design">Design</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Protoype</a>
@@ -106,7 +112,7 @@
     </section>
 
     <!-- The Team -->
-    <section class="success" id="about">
+    <section class="success" id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -149,52 +155,55 @@
     </section>
 
     <!-- Video -->
-    <section class="video" id="about">
+    <section class="video" id="video">
         <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Concept Video</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
             <div class="row">
                 <iframe width="640" height="360" src="https://www.youtube.com/embed/1_6CTiQ-FnY" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </section>
 
-    <!-- Reports -->
-    <section class="success" id="about">
+    <!-- Design Process -->
+    <section class="success" id="design">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>The Team</h2>
+                    <h2>Design Process</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-6 portfolio-item">
                     <a class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/cristian.png" class="img-responsive" alt="">
                     </a>
+                    <h3>Needfinding</h3>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-6 portfolio-item">
                     <a class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/neven.png" class="img-responsive" alt="">
                     </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/dartis.png" class="img-responsive" alt="">
-                    </a>
+                    <h3>POV, HMW, Experience Prototypes</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 text-center">
-                    <h3>Cristian Lara</h3>
-                    <p>Designer</br>Developer</p>
+                <div class="col-sm-6 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/cristian.png" class="img-responsive" alt="">
+                    </a>
+                    <h3>Low-fi Prototype</h3>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <h3>Neven Wang-Tomic</h3>
-                    <p>Team Manager</br>Developer</p>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <h3>Dartis Willis</h3>
-                    <p>Head Design</br>User Testing</p>
+                <div class="col-sm-6 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/neven.png" class="img-responsive" alt="">
+                    </a>
+                    <h3>Medium-fi Prototype</h3>
                 </div>
             </div>
         </div>
