added parallax effect
the header container background has a parallax effect when scrolling

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <span class="name">Herd</span>
-                        <hr class="star-light">
+                        <!-- <hr class="star-light2"> -->
                         <span class="skills">Never Miss Out</span>
                     </div>
                 </div>
@@ -180,47 +180,115 @@
             </div>
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/cristian.png" class="img-responsive" alt="">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="design-buttons" src="img/reports/needfinding/cover.png" class="img-responsive" alt="">
                     </a>
                     <h3>Needfinding</h3>
                 </div>
                 <div class="col-sm-6 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/neven.png" class="img-responsive" alt="">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="design-buttons" src="img/reports/experience/cover.jpg" class="img-responsive" alt="">
                     </a>
                     <h3>POV, HMW, Experience Prototypes</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/cristian.png" class="img-responsive" alt="">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="design-buttons" src="img/reports/video/cover.png" class="img-responsive" alt="">
+                    </a>
+                    <h3>Concept Video</h3>
+                </div>
+                <div class="col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="design-buttons" src="img/reports/lowfi/cover.jpg" class="img-responsive" alt="">
                     </a>
                     <h3>Low-fi Prototype</h3>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-sm-6 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/neven.png" class="img-responsive" alt="">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="design-buttons" src="img/reports/mediumfi/cover.png" class="img-responsive" alt="">
                     </a>
                     <h3>Medium-fi Prototype</h3>
+                </div>
+                <div class="col-sm-6 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="design-buttons" src="img/reports/heuristic/cover.jpg" class="img-responsive" alt="">
+                    </a>
+                    <h3>Heuristic Evaluation</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 portfolio-item">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <!-- <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div> -->
+                        <img class="design-buttons" src="img/reports/highfi/cover.jpg" class="img-responsive" alt="">
+                    </a>
+                    <h3>High-fi Prototype</h3>
+                </div>
+                <div class="col-sm-6 portfolio-item">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <!-- <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div> -->
+                        <img class="design-buttons" src="img/reports/pitch/cover.jpg" class="img-responsive" alt="">
+                    </a>
+                    <h3>Poster and Pitch</h3>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Prototype -->
+    <!-- Medium-fi Prototype -->
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Prototype</h2>
+                    <h2>Medium-fi Prototype</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4"></div>
-                <div class="col-lg-8 protoype">
+                <div class="col-lg-12 protoype">
                     <div class="protoio-embed-prototype" data-account="cristianlara" data-project="8de3d836-95dd-435b-871b-4454628aad86" data-version="1" data-show-sidebuttons="0" style="width: 400px; height: 600px;"></div>
                     <script async src="//static.proto.io/api/widget-embed.js"></script>
                 </div>
@@ -239,40 +307,6 @@
 
     <!-- Footer -->
     <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>Stanford Ave<br>Stanford, CA 94305</p>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Herd</h3>
-                        <p>Herd is a...</a>.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="footer-below">
             <div class="container">
                 <div class="row">
@@ -289,6 +323,212 @@
         <a class="btn btn-primary" href="#page-top">
             <i class="fa fa-chevron-up"></i>
         </a>
+    </div>
+
+    <!-- Portfolio Modals -->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Needfinding</h2>
+                            <hr class="star-primary">
+                            <img src="img/reports/needfinding/cover.png" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                                <li>Presentation:
+                                    <strong><a href="img/reports/needfinding/presentation.pdf" title="presentation.pdf"> pdf</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="img/reports/needfinding/presentation.pptx" title="report.pdf" target="_blank">pptx</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>POV, HMW, Experience Prototypes</h2>
+                            <hr class="star-primary">
+                            <img src="img/reports/experience/cover.jpg" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                                <li>Presentation:
+                                    <strong><a href="img/reports/experience/presentation.pdf" title="presentation.pdf">pdf,</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="img/reports/experience/presentation.pptx" title="report.pdf" target="_blank">pptx</a>
+                                    </strong>
+                                </li>
+                                <li>Report:
+                                    <strong><a href="img/reports/experience/report.pdf" title="report.pdf" target="_blank">pdf</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Concept Video</h2>
+                            <hr class="star-primary">
+                            <img src="img/reports/video/cover.png" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                                <li>Presentation:
+                                    <strong><a href="img/reports/video/presentation.pdf" title="presentation.pdf">pdf,</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="img/reports/video/presentation.pptx" title="report.pdf" target="_blank">pptx</a>
+                                    </strong>
+                                </li>
+                                <li>Video:
+                                    <strong><a href="https://youtu.be/1_6CTiQ-FnY" title="concept_video.pdf">link</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Low-fi prototype</h2>
+                            <hr class="star-primary">
+                            <img src="img/reports/lowfi/cover.jpg" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                                <li>Presentation:
+                                    <strong><a href="img/reports/lowfi/presentation.pdf" title="presentation.pdf">pdf,</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="img/reports/lowfi/presentation.pptx" title="report.pdf" target="_blank">pptx</a>
+                                    </strong>
+                                </li>
+                                <li>Report:
+                                    <strong><a href="img/reports/lowfi/report.pdf" title="report.pdf" target="_blank">pdf</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>medium-fi prototype</h2>
+                            <hr class="star-primary">
+                            <img src="img/reports/mediumfi/cover.png" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                                <li>Presentation:
+                                    <strong><a href="img/reports/mediumfi/presentation.pdf" title="presentation.pdf">pdf,</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="img/reports/mediumfi/presentation.pptx" title="report.pdf" target="_blank">pptx</a>
+                                    </strong>
+                                </li>
+                                <li>Link to Prototype:
+                                    <strong><a href="https://cristianlara.proto.io/share/?id=8de3d836-95dd-435b-871b-4454628aad86&v=1" title="presentation.pdf">Herd Prototype</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Heuristic Evaluation</h2>
+                            <hr class="star-primary">
+                            <img src="img/reports/heuristic/cover.jpg" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                                <li>Report:
+                                    <strong><a href="img/reports/heuristic/report.pdf" title="report.pdf" target="_blank">pdf</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- jQuery -->
